Fix spacing, fix mess

--- a/choheron.github.io/public/css/defLayout.css
+++ b/choheron.github.io/public/css/defLayout.css
@@ -33,6 +33,12 @@ body {
 }
 
 .linkBlock {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: center;
+
     text-align: center;
     color: rgb(41, 34, 144);
 
@@ -66,12 +72,13 @@ body {
     margin: -20px;
 }
 
-a:link {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
+a {
+    height: 45px;
+    width: 45px;
+    transition: all 1s ease-out;
 }
 
-a:visited {
+a:link, a:visited {
     text-decoration: none;
     color: rgb(0, 0, 0);
 }
